[build-system]
requires = ["setuptools"]

[project]
name = "ftorch-utils"
version = "1.1"
authors = [
  {name = "Jack Atkinson"},
  {name = "Joe Wallwork"},
]
maintainers = [
  {name = "Jack Atkinson"},
  {name = "Joe Wallwork"},
]
description = "Python utilities supporting the FTorch Fortran interface for PyTorch."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "python",
  "machine-learning",
  "deep-learning",
  "fortran",
  "torch",
  "pytorch",
  "interoperability",
  "hacktoberfest",
  "libtorch",
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Fortran",
	"Programming Language :: Python",
]
dependencies = [
  "torch",
]

[project.optional-dependencies]
dev = [
  "clang-format==19.1.3",
  "clang-tidy==19.1.0",
  "cmakelang",
  "ford>=7.0.13",
  "fortitude-lint==0.7.0",
  "fypp==3.2",
  "pytest",
  "ruff==0.7.3",
]

[project.scripts]
pt2ts = "ftorch_utils.pt2ts:main_cli"

[project.urls]
Repository = "https://github.com/Cambridge-ICCS/FTorch"

[tool.setuptools]
packages = ["ftorch_utils"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules for full details of each ruleset.

# Enable:  D: `pydocstyle`, PL: `pylint`, I: `isort`, W: `pycodestyle whitespace`
#          NPY: `numpy`, FLY: `flynt`, RUF: `ruff`
#          From flake8: "ARG", "SLF", "S", "BLE", "B", "A", "C4", "EM", "ICN",
#                       "PIE", "Q", "RSE", "SIM", "TID"
select = ["D", "PL", "I", "E", "W", "NPY", "FLY", "RUF",
          "ARG", "SLF", "S", "BLE","B", "A", "C4", "EM", "ICN", "PIE", "Q", "RSE",
          "SIM", "TID"]

# Enable D417 (Missing argument description) on top of the NumPy convention.
extend-select = ["D417"]

# Ignore SIM108 (use ternary instead of if-else) as it can arguably obscure intent.
# Ignore RUF002 (ambiguous characters) as it does not allow apostrophes in strings.
ignore = ["SIM108", "RUF002"]

[tool.ruff.lint.pydocstyle]
# Use NumPy convention for checking docstrings
convention = "numpy"
